[gd_scene load_steps=4 format=2]

[ext_resource path="res://Redkost Comic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://VRDebugHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="VRDebugHUD" type="Control"]
margin_left = 7.0
margin_top = 116.0
margin_right = 1027.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="BasisLabel" type="Label" parent="."]
margin_left = 2.0
margin_top = 1.0
margin_right = 1017.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "HMD Translate"

[node name="X_X" type="Label" parent="BasisLabel"]
margin_left = 5.0
margin_top = 95.0
margin_right = 166.0
margin_bottom = 180.0
custom_fonts/font = SubResource( 1 )
text = "X_X"

[node name="X_Y" type="Label" parent="BasisLabel"]
margin_left = 262.0
margin_top = 94.0
margin_right = 417.0
margin_bottom = 179.0
custom_fonts/font = SubResource( 1 )
text = "X_Y"

[node name="X_Z" type="Label" parent="BasisLabel"]
margin_left = 520.0
margin_top = 91.0
margin_right = 682.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 1 )
text = "X_Z"

[node name="Y_X" type="Label" parent="BasisLabel"]
margin_left = 3.0
margin_top = 193.0
margin_right = 158.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 1 )
text = "Y_X"

[node name="Y_Y" type="Label" parent="BasisLabel"]
margin_left = 257.0
margin_top = 189.0
margin_right = 406.0
margin_bottom = 274.0
custom_fonts/font = SubResource( 1 )
text = "Y_Y"

[node name="Y_Z" type="Label" parent="BasisLabel"]
margin_left = 521.0
margin_top = 184.0
margin_right = 683.0
margin_bottom = 269.0
custom_fonts/font = SubResource( 1 )
text = "Y_Z"

[node name="Z_X" type="Label" parent="BasisLabel"]
margin_left = 7.0
margin_top = 306.0
margin_right = 160.0
margin_bottom = 391.0
custom_fonts/font = SubResource( 1 )
text = "Z_X"

[node name="Z_Y" type="Label" parent="BasisLabel"]
margin_left = 253.0
margin_top = 302.0
margin_right = 400.0
margin_bottom = 387.0
custom_fonts/font = SubResource( 1 )
text = "Z_Y"

[node name="Z_Z" type="Label" parent="BasisLabel"]
margin_left = 521.0
margin_top = 301.0
margin_right = 683.0
margin_bottom = 386.0
custom_fonts/font = SubResource( 1 )
text = "Z_Z"

[node name="OriginLabel" type="Label" parent="."]
margin_left = 17.0
margin_top = 424.0
margin_right = 1032.0
margin_bottom = 509.0
custom_fonts/font = SubResource( 1 )
text = "HMD Origin"

[node name="Origin_X" type="Label" parent="OriginLabel"]
margin_left = -6.0
margin_top = 108.0
margin_right = 155.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 1 )
text = "X"

[node name="Origin_Y" type="Label" parent="OriginLabel"]
margin_left = 238.0
margin_top = 111.0
margin_right = 399.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 1 )
text = "Y"

[node name="Origin_Z" type="Label" parent="OriginLabel"]
margin_left = 507.0
margin_top = 100.0
margin_right = 668.0
margin_bottom = 185.0
custom_fonts/font = SubResource( 1 )
text = "Z"

[node name="Status" type="Label" parent="."]
margin_left = 96.0
margin_top = 658.0
margin_right = 564.0
margin_bottom = 743.0
custom_fonts/font = SubResource( 1 )
text = "..."
align = 1
__meta__ = {
"_editor_description_": "Label that states what the VR Player is currently doing."
}
