[gd_scene load_steps=4 format=2]

[ext_resource path="res://models/VRHUD/Redkost Comic.otf" type="DynamicFontData" id=1]
[ext_resource path="res://models/VRHUD/VRDebugHUD.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 1 )

[node name="VRDebugHUD" type="Control"]
margin_left = 7.0
margin_top = 116.0
margin_right = 1027.0
margin_bottom = 196.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 2 )

[node name="selected_car" type="Label" parent="."]
margin_left = -2.0
margin_top = -109.0
margin_right = 496.0
margin_bottom = -24.0
custom_fonts/font = SubResource( 1 )
text = "car: none"

[node name="selected_color" type="Label" parent="."]
margin_left = -3.0
margin_top = -15.0
margin_right = 633.0
margin_bottom = 70.0
custom_fonts/font = SubResource( 1 )
text = "colour: none"
